# Onion

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  push-action.yaml  release-package.yml
docs/: README.md
examples/: README.md
onion/: CMakeLists.txt  README.md  __init__.py  autograd.cpp  autograd.h  cpu.cpp  cpu.h  cuda.cu  cuda.h  linear.cpp  linear.h  tensor.cpp  tensor.h
onion/cpp/: CMakeLists.txt  README.md  cpu.h  main_test.cpp  tensor.cpp
onion/nn/: linear.cpp  linear.h  module.h  relu.cpp  relu.h  relu_cuda.cu  relu_cuda.h
onion/optim/: adam.cpp  adam.h  optimizer.h
onion/pybind/: CMakeLists.txt  README.md  library.cpp  linear_bind.cpp  nn_bind.cpp  optim_bind.cpp  pybind_common.h  relu_bind.cpp  tensor_bind.cpp
onion/python/: README.md
tests/: README.md  cleaner.py  test.py  testAutoGrad.py  testLinear.py  testMatmul.py  testOptim.py  testRelu.py  testTensor.py  testTensor2.py  testlinear.py  testmatmul.py  testproduit.py
wheelhouse/: onion-0.1.0a0-cp311-cp311-win_amd64.whl
