[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11>=2.11.1"]
build-backend = "scikit_build_core.build"

[project]
name = "onion"
version = "0.1.0a0"
description = "A simple Deep Learning framework for Python."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AubinSeptier", email = "auteur1@exemple.com"},
    {name = "DREI-8", email = "auteur2@exemple.com"},
    {name = "Euler033", email = "auteur3@exemple.com"},
    {name = "ThomasDelmas974", email = "auteur4@exemple.com"},
]
keywords = ["onion", "deep-learning", "tensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
]

[project.urls]
"Homepage" = "https://github.com/"
"Bug Tracker" = "https://github.com/"

[tool.scikit-build]
# Configuration du build C++/Python
wheel.packages = []  # Nous utilisons des modules natifs, pas de packages Python purs
cmake.verbose = true

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"